Fixed exception due to corrupt asteroid files. Fixed Save was incorrectly allowed on Dedicated Server when not using Elevated privileges. Upped the Asteroid Sphere generation radius from 500 to 3000. I have no idea if 3000 will work. Probably not. Updated to latest SE binaries 01.063.008. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Interop\QuaternionD.cs" />
     <Compile Include="Interop\SpaceEngineersResources.cs" />
     <Compile Include="Interop\SpaceEngineersRepair.cs" />
+    <Compile Include="Interop\VoxelMapLoader.cs" />
     <Compile Include="Models\Asteroids\AsteroidByteFiller.cs" />
     <Compile Include="Models\Asteroids\AsteroidSeedFiller.cs" />
     <Compile Include="Models\Asteroids\AsteroidSeedFillProperties.cs" />
