Removed Sandbox.Game.dll from checks, as it is causing Exception on 32 bit operating systems. Fixed counter causing sphere asreroid generation to abort prematurely. Fixed model import labels (XYX>XYZ). Added button to copy item position to GPS coordinates. Updated to latest SE binaries 01.076.011. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -777,6 +777,9 @@
   <ItemGroup>
     <None Include="Resources\users_back.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\target.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
