Updated to SE binaries 01.084.006. Updated to work with new binaries in Space Engineers release 01.084. Changed entity Id's generated to use SE API. Updated Repair to fix corrupt world with bad IdentityId caused by previous use of SEToolbox Repair.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -66,6 +66,9 @@
     <Reference Include="Sandbox.Common.XmlSerializers">
       <HintPath>..\References\Sandbox.Common.XmlSerializers.dll</HintPath>
     </Reference>
+    <Reference Include="Sandbox.Game">
+      <HintPath>C:\Program Files\Reference Assemblies\SpaceEngineers\Sandbox.Game.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -86,9 +89,6 @@
     <Reference Include="UIAutomationTypes" />
     <Reference Include="VRage">
       <HintPath>..\References\VRage.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Data">
-      <HintPath>..\References\VRage.Data.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Library, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
