--- a/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
@@ -39,7 +39,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>SEToolbox.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\SEToolbox.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -107,9 +107,6 @@
     <Compile Include="PaletteReplacerQuantizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quantizer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SEToolbox.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
