--- a/Main/SEToolbox/SEToolbox.Image.Shaders/SEToolbox.ImageShaders.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Shaders/SEToolbox.ImageShaders.csproj
@@ -47,7 +47,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>SEToolbox.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\SEToolbox.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -109,9 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Effect Include="ShaderSource\Desaturate.fx" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="SEToolbox.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EffectCompile" Condition="'@(Effect)' != '' ">
