Fixed mouse scrolling in Construction tab. Added Velocity column to main display.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -271,6 +271,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\BrowserBehavior.cs" />
+    <Compile Include="Services\BubbleScrollBehavior.cs" />
     <Compile Include="Services\ColorDialog.cs">
       <SubType>Code</SubType>
     </Compile>
