SE 1.116 updates. There are major changes to the serializer code due to changes in the SE assemblies. This version probably isn't ME compatible, and it hasn't been tested. There is weird changes to the floating point values in every MyPositionAndOrientation object when saving. Testing shows it to be in the Keen codebase, not mine. Wheather it's due to the Toolbox codebase, I don't really know. I don't like it changing values like that. It shouldn't. And I don't want to release it like this. It does look like SEToolbox isn't quite dead yet though. If I can get to the bottom of the serlizing issue, it might be possible to release.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -132,6 +132,12 @@
     <Reference Include="Sandbox.Common">
       <HintPath>$(BinPath)\Sandbox.Common.dll</HintPath>
     </Reference>
+    <Reference Include="SpaceEngineers.ObjectBuilders">
+      <HintPath>$(BinPath)\SpaceEngineers.ObjectBuilders.dll</HintPath>
+    </Reference>
+    <Reference Include="SpaceEngineers.ObjectBuilders.XmlSerializers">
+      <HintPath>$(BinPath)\SpaceEngineers.ObjectBuilders.XmlSerializers.dll</HintPath>
+    </Reference>
     <Reference Include="VRage">
       <HintPath>$(BinPath)\VRage.dll</HintPath>
     </Reference>
@@ -146,6 +152,9 @@
     </Reference>
     <Reference Include="VRage.Math">
       <HintPath>$(BinPath)\VRage.Math.dll</HintPath>
+    </Reference>
+    <Reference Include="Sandbox.Game">
+      <HintPath>$(BinPath)\Sandbox.Game.dll</HintPath>
     </Reference>
     <ProjectReference Include="..\SEToolbox.Image.Library\SEToolbox.ImageLibrary.csproj">
       <Project>{e78476cb-bc3d-4265-806d-96f09229a449}</Project>
@@ -189,6 +198,7 @@
     <Compile Include="Interfaces\IMainView.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelRayTracerConsts.cs" />
     <Compile Include="Interop\QuaternionD.cs" />
+    <Compile Include="Interop\SpaceEngineersTypes.cs" />
     <Compile Include="Interop\SpaceEngineersResources.cs" />
     <Compile Include="Interop\SpaceEngineersRepair.cs" />
     <Compile Include="Interop\VoxelMapLoader.cs" />
