Setting up support for satellite resources #21 Added resources for main page. Added resource support for localization that isn't supported by the game. Added Chinese back into the language menu. Added working resources into the builds as working examples. I've used Chinese so far because its more difficult to support because it isn't technically supported by the game resources. The build options are commented out until more of the app uses resources.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -619,6 +619,12 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="Properties\MyTexts.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\MyTexts.zh.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.zh.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
