Build requirements changes fixed at Framework 4.6.1 C#5. Aligned build requirements for building with MSBuild which only appears to support up to C#5. To use new compilers, you must visit. http://go.microsoft.com/fwlink/?LinkID=533240 They are not aparently supported out of the box, so I have no desire to implment them as it will make it harder for other developers to simply drop in and start working on the codebase.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -160,6 +160,9 @@
     <Reference Include="VRage.Math">
       <HintPath>$(BinPath)\VRage.Math.dll</HintPath>
     </Reference>
+    <Reference Include="VRage.Native">
+      <HintPath>$(BinPath)\VRage.Native.dll</HintPath>
+    </Reference>
     <Reference Include="VRage.Render">
       <HintPath>$(BinPath)\VRage.Render.dll</HintPath>
     </Reference>
