--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -153,6 +153,12 @@
     <Reference Include="SpaceEngineers.ObjectBuilders">
       <HintPath>$(BinPath)\SpaceEngineers.ObjectBuilders.dll</HintPath>
     </Reference>
+    <Reference Include="InfinarioSDK">
+      <HintPath>$(BinPath)\InfinarioSDK.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite">
+      <HintPath>$(BinPath)\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="VRage">
       <HintPath>$(BinPath)\VRage.dll</HintPath>
     </Reference>
